@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -291,7 +292,7 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                     }
 
                     if (subCommand.equals("add")) {
-                        return Arrays.asList("[name]");
+                        return List.of("[name]");
                     }
                 }
 
@@ -300,7 +301,7 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("vampirecooldowns")) {
-                    return Arrays.asList("reset", "clear").stream().filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
+                    return Stream.of("reset", "clear").filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
                 }
 
                 if (args.length == 4 && args[1].equalsIgnoreCase("vampirecooldowns") && (args[2].equalsIgnoreCase("reset") || args[2].equalsIgnoreCase("clear"))) {
@@ -329,11 +330,11 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                 }
 
                 if (args.length == 4 && args[1].equalsIgnoreCase("give_cure_book")) {
-                    return Arrays.asList("1", "2", "3", "4").stream().filter((s) -> s.startsWith(args[3])).collect(Collectors.toList());
+                    return Stream.of("1", "2", "3", "4").filter((s) -> s.startsWith(args[3])).collect(Collectors.toList());
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("stash_cure_book")) {
-                    return Arrays.asList("1", "2", "3", "4").stream().filter((s) -> s.startsWith(args[2])).collect(Collectors.toList());
+                    return Stream.of("1", "2", "3", "4").filter((s) -> s.startsWith(args[2])).collect(Collectors.toList());
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("clearbloodmoonbuffs")) {
@@ -353,7 +354,7 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                 }
 
                 if (args.length == 4 && args[1].equalsIgnoreCase("resetplayer")) {
-                    return Arrays.asList("true", "false").stream().filter((s) -> s.startsWith(args[3].toLowerCase())).collect(Collectors.toList());
+                    return Stream.of("true", "false").filter((s) -> s.startsWith(args[3].toLowerCase())).collect(Collectors.toList());
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("fixattributes")) {
@@ -364,7 +365,7 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("removeendermen")) {
-                    return Arrays.asList("all", "toggle", "status").stream().filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
+                    return Stream.of("all", "toggle", "status").filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("setupplayer")) {
@@ -372,7 +373,7 @@ public class PowCommand implements CommandExecutor, TabCompleter {
                 }
 
                 if (args.length == 3 && args[1].equalsIgnoreCase("init")) {
-                    return Arrays.asList("cancel").stream().filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
+                    return Stream.of("cancel").filter((s) -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
                 }
             }
 
